--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ iframe {
 
     <h2 style="color:red;">おすすめサイト</h2>
     <a href="https://www.aliexpress.com" target="_blank" style="color:red;">
-        ありえくすぷれす.com
+        AliExpress.com
     </a>
 
     <h2 style="margin-top:40px; color:yellow;">かいちゃんのひみつ</h2>
@@ -75,11 +75,22 @@ iframe {
     <div id="board" style="margin-top:20px; text-align:left;"></div>
 </div>
 
-<!-- 右側：ランダム動画 -->
+
+<!-- 右側 -->
 <div id="right">
     <h2 style="color:orange;">ランダム動画ジェネレーター</h2>
     <iframe id="video" src=""></iframe>
+
+    <!-- PNG画像 -->
+    <img src="76561199814821332R26 (1).png" 
+         style="width:100%; margin-top:20px; border:2px solid red;">
+
+    <!-- MP4動画 -->
+    <video src="download.mp4" 
+           style="width:100%; margin-top:20px;" 
+           controls></video>
 </div>
+
 
 <script>
 // ---------------------------
