--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@ iframe {
     <!-- 共有訪問者カウンター -->
     <h2 id="counter" style="color:lime;">読み込み中…</h2>
 
-
     <h2 style="color:red;">おすすめサイト</h2>
     <a href="https://www.aliexpress.com" target="_blank" style="color:red;">
         AliExpress.com
@@ -66,25 +65,15 @@ iframe {
 
     <hr style="margin-top:40px;">
 
+    <!-- ★ 無料で確実に動く掲示板 -->
+    <h2 style="color:lime;">フリー掲示板（ネット保存）</h2>
 
-    <!-- ★ 新しい掲示板（確実に動く） -->
-    <h2 style="color:lime;">フリー掲示板（サーバー保存）</h2>
+    <iframe 
+        src="https://www3.rocketbbs.com/601/test_free_bbs.html"
+        style="width:100%; height:400px; border:2px solid #0f0; background:black;">
+    </iframe>
 
-    <div id="disqus_thread" style="background:#222; padding:10px; border-radius:10px;"></div>
-
-    <script>
-    /**
-     * 完全自動 Disqus 埋め込み
-     */
-    (function() {
-        var d = document, s = d.createElement('script');
-        s.src = 'https://commentbox-2025.disqus.com/embed.js'; 
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
-    </script>
 </div>
-
 
 <!-- 右側 -->
 <div id="right">
@@ -101,7 +90,7 @@ iframe {
 
 <script>
 // ---------------------------
-// 🔥 共有訪問者カウンター（全デバイス共通）
+// 🔥 共有カウンター
 // ---------------------------
 fetch("https://api.countapi.xyz/hit/nakazawa2025/site")
   .then(res => res.json())
@@ -126,7 +115,6 @@ function checkPass() {
             "パスワードが違います<br>ギャミー「お仕置きが必要だね〜」";
     }
 }
-
 
 // ---------------------------
 // ランダム動画
