--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ iframe {
 
     <h2 style="color:lime;">フリー掲示板</h2>
 
-    <!-- kuku.lu 掲示板 -->
+    <!--掲示板 -->
     <iframe 
-        src="https://c.kuku.lu/t6dht4nb"
+        src="https://chat.onl.jp/?Xhbn1thAk8"
         style="width:100%; height:500px; border:2px solid lime;">
     </iframe>
 
