--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ iframe {
 
     <!--掲示板 -->
     <iframe 
-        src="https://nakazawa.1my.jp/"
+        src="https://z-z.jp/?nakazawa"
         style="width:100%; height:500px; border:2px solid lime;">
     </iframe>
 
