--- a/index.html
+++ b/index.html
@@ -53,30 +53,42 @@ iframe {
 <div id="left">
     <h1 class="rainbow">Nakazawaaaaaaaaaa.com</h1>
 
-    <!-- 外部アクセスカウンター -->
-    <div style="margin:20px 0;">
-        <nobr>
-        <table border="0" cellspacing="0" cellpadding="0">
-        <tbody>
-        <tr>
-        <td>
-        <a href="https://ctr.stylemap.co.jp/">
-        <img src="https://www.f-counter.net/ani1/66/1763653435/"
-        alt="無料アクセスカウンター"
-        style="margin:0; padding:0; border:0; vertical-align:bottom;">
-        </a>
-        </td>
-        <td>
-        <a href="https://ctr.stylemap.co.jp/">
-        <img src="https://www.f-counter.net/ani2/66/1763653435/"
-        alt="無料アクセスカウンター"
-        style="margin:0; padding:0; border:0; vertical-align:bottom;">
-        </a>
-        </td>
-        </tr>
-        </tbody>
-        </table>
-        </nobr>
+    <!-- ★★★ アクセスカウンター（大・中央・文章付き） ★★★ -->
+    <div style="text-align:center; margin:30px 0;">
+
+        <h2 style="font-size:32px; color:lime;">
+            あなたは 
+            <span style="font-size:42px; color:yellow; font-weight:bold;">
+                ↓↓↓
+            </span>
+            人目の訪問者です
+        </h2>
+
+        <!-- カウンター画像（デカく＋中央） -->
+        <div style="display:flex; justify-content:center; margin-top:15px; zoom:2;">
+            <nobr>
+            <table border="0" cellspacing="0" cellpadding="0">
+            <tbody>
+            <tr>
+            <td>
+            <a href="https://ctr.stylemap.co.jp/">
+                <img src="https://www.f-counter.net/ani1/66/1763653435/"
+                alt="アクセスカウンター"
+                style="margin:0; padding:0; border:0; vertical-align:bottom;">
+            </a>
+            </td>
+            <td>
+            <a href="https://ctr.stylemap.co.jp/">
+                <img src="https://www.f-counter.net/ani2/66/1763653435/"
+                alt="アクセスカウンター"
+                style="margin:0; padding:0; border:0; vertical-align:bottom;">
+            </a>
+            </td>
+            </tr>
+            </tbody>
+            </table>
+            </nobr>
+        </div>
     </div>
 
     <h2 style="color:red;">おすすめサイト</h2>
