--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ iframe {
 <div id="left">
     <h1 class="rainbow">Nakazawaaaaaaaaaa.com</h1>
 
-    <!-- ★★★ アクセスカウンター（大・中央・文章付き） ★★★ -->
+    <!-- ★★★ アクセスカウンター（Rays Counter版） ★★★ -->
     <div style="text-align:center; margin:30px 0;">
 
         <h2 style="font-size:32px; color:lime;">
@@ -64,31 +64,30 @@ iframe {
             人目の訪問者です
         </h2>
 
-        <!-- カウンター画像（デカく＋中央） -->
+        <!--タグはここから-->
         <div style="display:flex; justify-content:center; margin-top:15px; zoom:2;">
-            <nobr>
             <table border="0" cellspacing="0" cellpadding="0">
-            <tbody>
-            <tr>
-            <td>
-            <a href="https://ctr.stylemap.co.jp/">
-                <img src="https://www.f-counter.net/ani1/66/1763653435/"
-                alt="アクセスカウンター"
-                style="margin:0; padding:0; border:0; vertical-align:bottom;">
-            </a>
-            </td>
-            <td>
-            <a href="https://ctr.stylemap.co.jp/">
-                <img src="https://www.f-counter.net/ani2/66/1763653435/"
-                alt="アクセスカウンター"
-                style="margin:0; padding:0; border:0; vertical-align:bottom;">
-            </a>
-            </td>
-            </tr>
-            </tbody>
+                <tr>
+                    <td align="center">
+                        <a href="http://www.rays-counter.com/">
+                            <img src="http://www.rays-counter.com/d1303_f6_022/691f486dde8ce/" 
+                                 alt="アクセスカウンター" border="0">
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <img src="http://www.rays-counter.com/images/counter_01.gif" border="0">
+                        <img src="http://www.rays-counter.com/images/counter_02.gif" border="0">
+                        <img src="http://www.rays-counter.com/images/counter_03.gif" border="0">
+                        <img src="http://www.rays-counter.com/images/counter_04.gif" border="0">
+                        <img src="http://www.rays-counter.com/images/counter_05.gif" border="0">
+                    </td>
+                </tr>
             </table>
-            </nobr>
         </div>
+        <!--ここまで-->
+
     </div>
 
     <h2 style="color:red;">おすすめサイト</h2>
@@ -118,10 +117,10 @@ iframe {
 
     <h2 style="color:lime;">フリー掲示板(投稿するを押して投稿)</h2>
 
-    <!--掲示板 -->
+    <!--掲示板 2.5倍縦に拡大-->
     <iframe 
         src="https://z-z.jp/?nakazawa"
-style="width:100%; height:1250px; border:2px solid lime;">
+        style="width:100%; height:1250px; border:2px solid lime;">
     </iframe>
 
 </div>
