--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ iframe {
 <div id="left">
     <h1 class="rainbow">Nakazawaaaaaaaaaa.com</h1>
 
-    <!-- ★★★ アクセスカウンター（Rays Counter版） ★★★ -->
+    <!-- ★★★ アクセスカウンター（WOX版） ★★★ -->
     <div style="text-align:center; margin:30px 0;">
 
         <h2 style="font-size:32px; color:lime;">
@@ -64,29 +64,17 @@ iframe {
             人目の訪問者です
         </h2>
 
-        <!--タグはここから-->
-        <div style="display:flex; justify-content:center; margin-top:15px; zoom:2;">
-            <table border="0" cellspacing="0" cellpadding="0">
-                <tr>
-                    <td align="center">
-                        <a href="http://www.rays-counter.com/">
-                            <img src="http://www.rays-counter.com/d1303_f6_022/691f486dde8ce/" 
-                                 alt="アクセスカウンター" border="0">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center">
-                        <img src="http://www.rays-counter.com/images/counter_01.gif" border="0">
-                        <img src="http://www.rays-counter.com/images/counter_02.gif" border="0">
-                        <img src="http://www.rays-counter.com/images/counter_03.gif" border="0">
-                        <img src="http://www.rays-counter.com/images/counter_04.gif" border="0">
-                        <img src="http://www.rays-counter.com/images/counter_05.gif" border="0">
-                    </td>
-                </tr>
-            </table>
+        <!-- WOXカウンター（デカ表示） -->
+        <div style="display:flex; justify-content:center; margin-top:20px; zoom:2;">
+            <script src="https://nakazawa.counter.wox.cc" language="JavaScript" type="text/javascript"></script>
+            <noscript>
+                <a href="https://wox.cc">
+                    <img src="https://nakazawa.counter.wox.cc/?mode=noscript" 
+                         alt="ホームページ ブログ レンタル掲示板 - WOX" 
+                         title="ホームページ ブログ レンタル掲示板 - WOX" />
+                </a>
+            </noscript>
         </div>
-        <!--ここまで-->
 
     </div>
 
