--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ iframe {
     border: none;
 }
 
-/* 虹色タイトルアニメ */
+/* 虹色タイトル*/
 @keyframes rainbow {
     0% { color: red; }
     20% { color: orange; }
@@ -53,7 +53,7 @@ iframe {
 <div id="left">
     <h1 class="rainbow">Nakazawaaaaaaaaaa.com</h1>
 
-    <!-- ★★★ アクセスカウンター（WOX版） ★★★ -->
+    
     <div style="text-align:center; margin:30px 0;">
 
         <h2 style="font-size:32px; color:lime;">
@@ -64,7 +64,7 @@ iframe {
             人目の訪問者です
         </h2>
 
-        <!-- WOXカウンター（デカ表示） -->
+        <!-- WOXカウンター -->
         <div style="display:flex; justify-content:center; margin-top:20px; zoom:2;">
             <script src="https://nakazawa.counter.wox.cc" language="JavaScript" type="text/javascript"></script>
             <noscript>
@@ -105,7 +105,7 @@ iframe {
 
     <h2 style="color:lime;">フリー掲示板(投稿するを押して投稿)</h2>
 
-    <!--掲示板 2.5倍縦に拡大-->
+    <!--掲示板 2-->
     <iframe 
         src="https://z-z.jp/?nakazawa"
         style="width:100%; height:1250px; border:2px solid lime;">
