--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ iframe {
 
     <!--掲示板 2-->
     <iframe 
-        src="https://z-z.jp/?nakazawa"
+        src="https://nakazawa.bbs.wox.cc/#form"
         style="width:100%; height:1250px; border:2px solid lime;">
     </iframe>
 
