--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ iframe {
     border: none;
 }
 
-/* 虹色タイトル*/
+/* タイトル*/
 @keyframes rainbow {
     0% { color: red; }
     20% { color: orange; }
@@ -107,7 +107,7 @@ iframe {
 
     <!--掲示板 2-->
     <iframe 
-        src="https://tlk.io/nakazawa"
+        src="https://z.wikiwiki.jp/mhq30dnmatfm2o3o/topic/1"
         style="width:100%; height:1250px; border:2px solid lime;">
     </iframe>
 
