--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ iframe {
 
     <hr style="margin-top:40px;">
 
-    <h2 style="color:lime;">フリー掲示板(投稿するを押して投稿)</h2>
+    <h2 style="color:lime;">掲示板</h2>
 
     <!--掲示板 2-->
     <iframe 
