--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ iframe {
 
     <!--掲示板 2-->
     <iframe 
-        src="https://z.wikiwiki.jp/mhq30dnmatfm2o3o/topic/1"
+        src="https://netroom.oz96.com/?r=233347"
         style="width:100%; height:1250px; border:2px solid lime;">
     </iframe>
 
