--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@ body {
     color: white;
     font-family: "Comic Sans MS", cursive, sans-serif;
     display: flex;
+    flex-direction: column;
     padding: 40px;
+}
+#content {
+    display: flex;
 }
 #left { width: 60%; text-align: center; }
 #right { width: 40%; padding-left: 20px; text-align: center; }
@@ -28,6 +32,8 @@ iframe { width: 100%; height: 250px; border: none; }
 </head>
 
 <body>
+
+<div id="content">
 <div id="left">
     <h1 class="rainbow">Nakazawaaaaaaaaaa.com</h1>
 
@@ -65,8 +71,8 @@ iframe { width: 100%; height: 250px; border: none; }
     <hr style="margin-top:40px;">
 
     <h2 style="color:lime;">ブロック崩しゲーム</h2>
-    <iframe style="width:100%; height:800px; border:2px solid lime;"
-        src="https://html5.gamedistribution.com/rvvASMiM/77087b953d9047198a48528927dab68a/index.html?gd_sdk_referrer_url=https%3A%2F%2Fwww.miniplay.com%2Fgame%2Fbreak-many-bricks&mp_api_as3_url=https%3A%2F%2Fssl.minijuegosgratis.com%2Flechuck%2Fas3%2Flatest.swf&mp_api_as3_url_bck=https%3A%2F%2Fapi.minijuegos.com%2Flechuck%2Fclient-as%2F&mp_api_id=5492&mp_api_js_url=https%3A%2F%2Fssl.minijuegosgratis.com%2Flechuck%2Fjs%2Flatest.js&mp_api_js_url_bck=https%3A%2F%2Fapi.minijuegos.com%2Flechuck%2Fclient-js%2F&mp_assets=https%3A%2F%2Fs2.minijuegosgratis.com%2F&mp_embed=0&mp_game_id=243526&mp_game_uid=break-many-bricks&mp_game_url=https%3A%2F%2Fwww.miniplay.com%2Fgame%2Fbreak-many-bricks&mp_int=1&mp_locale=en_US&mp_player_type=IFRAME&mp_site_https_url=https%3A%2F%2Fwww.miniplay.com%2F&mp_site_name=miniplay.com&mp_site_url=https%3A%2F%2Fwww.miniplay.com%2F&mp_timezone=Asia%2FTokyo&mp_view_type=&mini_signature=a671a5dbd50666cd10a0865b96fdf10a&xdm_e=https%3A%2F%2Fwww.miniplay.com&xdm_c=default2337&xdm_p=1&gd_zone_config=eyJwYXJlbnRVUkwiOiJodHRwczovL3d3dy5taW5pcGxheS5jb20vZ2FtZS9icmVhay1tYW55LWJyaWNrcyIsInBhcmVudERvbWFpbiI6Im1pbmlwbGF5LmNvbSIsInRvcERvbWFpbiI6Im1pbmlwbGF5LmNvbSIsImhhc0ltcHJlc3Npb24iOmZhbHNlLCJsb2FkZXJFbmFibGVkIjp0cnVlLCJob3N0IjoiaHRtbDUuZ2FtZWRpc3RyaWJ1dGlvbi5jb20iLCJ2ZXJzaW9uIjoiMS41LjE4In0%253D">
+    <iframe style="width:100%; height:500px; border:2px solid lime;"
+        src="https://html5.gamedistribution.com/rvvASMiM/77087b953d9047198a48528927dab68a/index.html">
     </iframe>
 </div>
 
@@ -75,6 +81,13 @@ iframe { width: 100%; height: 250px; border: none; }
     <iframe id="video" src=""></iframe>
     <img src="76561199814821332R26 (1).png" style="width:100%; margin-top:20px; border:2px solid red;">
     <video src="asdfg.mp4" style="width:100%; margin-top:20px;" controls></video>
+</div>
+</div> <!-- #content 終わり -->
+
+<!-- ⭐ ページ全体の最下部に配置された e.mp4 -->
+<div style="width:100%; text-align:center; margin-top:60px;">
+    <h2 style="color:aqua;">追加動画（e.mp4）</h2>
+    <video src="e.mp4" style="width:70%; border:2px solid aqua;" controls></video>
 </div>
 
 <script>
@@ -101,18 +114,6 @@ function loadRandomVideo() {
 }
 window.onload = loadRandomVideo;
 </script>
-
-    <!-- 追加: 一番下の動画とテキスト -->
-    <div style="width:100%; text-align:center; margin-top:50px;">
-        <h2 style="color:aqua;">☠</h2>
-        <video src="e.mp4" style="width:70%; border:2px solid aqua;" controls></video>
-        <p style="margin-top:20px; font-size:20px; color:white;">衝撃映像</p>
-    </div>
-
-    <!-- 一番下に e.mp4 -->
-    <div style="width:100%; text-align:center; margin-top:50px;">
-        <video src="e.mp4" style="width:70%; border:2px solid white;" controls></video>
-    </div>
 
 </body>
 </html>
