--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ iframe { width: 100%; height: 250px; border: none; }
 </div>
 </div> <!-- #content 終わり -->
 
-<!-- ⭐ ページ全体の最下部に配置された e.mp4 -->
+<!-- e.mp4 -->
 <div style="width:100%; text-align:center; margin-top:60px;">
-    <h2 style="color:aqua;">追加動画（e.mp4）</h2>
+    <h2 style="color:aqua;">💀</h2>
     <video src="e.mp4" style="width:70%; border:2px solid aqua;" controls></video>
 </div>
 
