--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ iframe { width: 100%; height: 250px; border: none; }
 </div> <!-- #content 終わり -->
 
 <!-- e.mp4 -->
-<div style="width:100%; text-align:center; margin-top:60px;">
+<div style="width:100%; text-align:center; margin-top:600px;">
     <h2 style="color:aqua;">💀</h2>
-    <video src="e.mp4" style="width:70%; border:2px solid aqua;" controls></video>
+    <video src="12345.mp4" style="width:70%; border:2px solid aqua;" controls></video>
 </div>
 
 <script>
