--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@ iframe, video, img {
 
 <section>
     <h2 class="blink" style="color:red; font-size:36px;">おすすめサイト2</h2>
-    <a href="https://www.dmm.co.jp/top/" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">あきひさの伝説.com</a>
+    <a href="https://www.effectivegatecpm.com/e489rn8n?key=9a3e97acd0392472deecc84f30dad02a" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">あきひさの伝説.com</a>
 </section>
 
 <section>
     <h2 class="blink" style="color:red; font-size:36px;">おすすめゲーム</h2>
-    <a href="https://jp.theacebanker.com/" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">丸山エロス.com</a>
+    <a href="https://www.effectivegatecpm.com/e489rn8n?key=9a3e97acd0392472deecc84f30dad02a" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">丸山エロス.com</a>
 </section>
 
 
