--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@ iframe, video, img {
     <a href="https://www.effectivegatecpm.com/e489rn8n?key=9a3e97acd0392472deecc84f30dad02a" target="_blank" class="blink" style="font-size:30px; color:white; font-family: 'Press Start 2P', monospace;">丸山エロス.com</a>
 </section>
 
-
 <!--広告 -->
 <section>
     <script type="text/javascript">
@@ -104,11 +103,9 @@ iframe, video, img {
 		'width' : 728,
 		'params' : {}
 	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
 </section>
-
-
 
 <section>
     <h2 style="color:yellow;">かいちゃんのひみつ</h2>
@@ -179,6 +176,7 @@ iframe, video, img {
 
 </div>
 
+<!-- ★★★ JavaScript（修正版） ★★★ -->
 <script>
 function checkPass() {
     let p = document.getElementById("pass").value;
@@ -199,10 +197,15 @@ function loadRandomVideo() {
         "https://www.youtube.com/embed/KhzCAigBttE",
         "https://www.youtube.com/embed/M4ybyejDRQo"
     ];
-    document.getElementById("video").src = list[Math.floor(Math.random() * list.length)];
+    document.getElementById("video").src =
+        list[Math.floor(Math.random() * list.length)];
 }
+
 window.onload = loadRandomVideo;
 </script>
+
+<!-- ★ Adsterra Ad Script -->
+<script type='text/javascript' src='//pl28111471.effectivegatecpm.com/4b/24/a8/4b24a8d7854a65dabb77ed312bd25e3a.js'></script>
 
 </body>
 </html>
