--- a/index.html
+++ b/index.html
@@ -94,15 +94,28 @@ iframe, video, img {
 </section>
 
 <!--広告 -->
-<section>
+<section style="display: flex; justify-content: center; width: 100%;">
     <script type="text/javascript">
-	atOptions = {
-		'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
+        atOptions = {
+            'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+</section>
+<!--広告2 -->
+<section style="display: flex; justify-content: center; width: 100%;">
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
     </script>
     <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
 </section>
@@ -163,7 +176,19 @@ iframe, video, img {
 <section><h2 style="color:white;">８日目</h2></section>
 <section><h2 style="color:white;">９日目</h2></section>
 <section><h2 style="color:white;">１０日目</h2></section>
-
+<!--広告2 -->
+<section style="display: flex; justify-content: center; width: 100%;">
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '7168a8fe5a667d3ea1af3f47b8033d49',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/7168a8fe5a667d3ea1af3f47b8033d49/invoke.js"></script>
+</section>
 <section>
  <h2 style="color:red;">👍👍👍👍👍👍👍👍👍👍👍👍👍</h2>
  <video src="ali.mp4" controls></video>
