--- a/index.html
+++ b/index.html
@@ -231,6 +231,6 @@ window.onload = loadRandomVideo;
 
 <!-- ★ Adsterra Ad Script -->
 <script type='text/javascript' src='//pl28111471.effectivegatecpm.com/4b/24/a8/4b24a8d7854a65dabb77ed312bd25e3a.js'></script>
-
+<script type='text/javascript' src='//pl28111596.effectivegatecpm.com/cb/88/ee/cb88eedc0e3684629ea00e7a7c102e58.js'></script>
 </body>
 </html>
