--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ iframe, video, img {
 </section>
 
 <section>
-    <h2 style="color:lime;">太鼓の達人</h2>
-    <iframe style="height:500px; border:2px solid lime;" src="https://musiclab.chromeexperiments.com/Rhythm/"></iframe>
+<script async="async" data-cfasync="false" src="//pl28111633.effectivegatecpm.com/2d3b6b9d1f227b1c9e373b22dc72b1b9/invoke.js"></script>
+<div id="container-2d3b6b9d1f227b1c9e373b22dc72b1b9"></div>
 </section>
 
 <section>
@@ -231,6 +231,5 @@ window.onload = loadRandomVideo;
 
 <!-- ★ Adsterra Ad Script -->
 <script type='text/javascript' src='//pl28111471.effectivegatecpm.com/4b/24/a8/4b24a8d7854a65dabb77ed312bd25e3a.js'></script>
-<script type='text/javascript' src='//pl28111596.effectivegatecpm.com/cb/88/ee/cb88eedc0e3684629ea00e7a7c102e58.js'></script>
 </body>
 </html>
